--- a/Mutual_Fund_Analytics.ipynb
+++ b/Mutual_Fund_Analytics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "[1229 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,31 +351,31 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [date, Motilal Oswal Midcap 30 Direct Growth]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, Quant Small Cap Fund Growth Option Direct Plan]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, Quant Tax Plan Growth Option Direct Plan]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, ICICI Prudential Gilt Fund Direct Plan Growth]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, PGIM India Gilt Fund Growth]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, PGIM India Dynamic Bond Fund Direct Plan Growth Option]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, Kotak Equity Hybrid Fund - Direct Plan - Growth]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, Edelweiss Aggressive Hybrid -Direct Plan-Growth Option]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n",
       "Empty DataFrame\n",
-      "Columns: [date, Kotak Debt Hybrid Direct Growth]\n",
+      "Columns: [date, nav]\n",
       "Index: []\n"
      ]
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        " [1228 rows x 2 columns]}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "[1229 rows x 4 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
        "[1229 rows x 5 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1475,7 @@
        "[1234 rows x 7 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
        "[1234 rows x 2 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1756,7 @@
        "[1234 rows x 3 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,19 +1826,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus dropping the rows with any null value"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This gives us the resulting data frame"
+    "Thus dropping the rows with any null value, This gives us the result data frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1973,7 @@
        "[1205 rows x 5 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1992,8 +1985,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking the consistency of the data using a preliminary plot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2019,8 +2019,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As per the normalization, the values are depicting absolute returns, thus total absolute returns in % is the value on the last day which is :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2076,7 @@
        "1204 2023-08-28      194.57     44.29        85.9       65.28"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2080,8 +2087,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A bar chart to better compare the absolute returns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2111,8 +2125,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "defining a function to calculate Compound Annualised Growth Rate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2122,8 +2143,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating CAGR for equity,debt,hybrid and index "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2141,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2177,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2194,8 +2222,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining functions to Calculate Alpha and beta"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2282,8 +2317,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating beta at two different time frames in 5 years"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2309,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2334,8 +2376,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "averaging the beta values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2359,8 +2408,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calcualting alpha "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2385,8 +2441,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Storing the result dataframe as a csv, which will be later used for the tableau dashboard"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
